<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
    tools:context=".ui.AddStoryActivity">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/activity_add_story_xml_constraintlayout_scene">

        <ImageView
            android:id="@+id/iv_add_story_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_200"
            android:contentDescription="@string/add_photo_story"
            android:minHeight="420dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_image_default_foreground" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_to_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/gallery"
            android:src="@drawable/ic_gallery"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="@id/fab_get_photo"
            app:layout_constraintEnd_toStartOf="@id/fab_get_photo" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_to_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/camera"
            android:src="@drawable/ic_camera"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@id/fab_get_photo"
            app:layout_constraintEnd_toEndOf="@id/fab_get_photo" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_get_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/get_photo"
            android:src="@drawable/ic_add"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@id/button_add"
            app:layout_constraintEnd_toStartOf="@+id/button_add"
            app:layout_constraintTop_toTopOf="@id/button_add" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="14dp"
            android:background="?attr/colorOnPrimary"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toTopOf="@id/button_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="?attr/colorSecondaryVariant"
                    android:padding="8dp"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/ed_add_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title_desc"
                    android:layout_margin="8dp"
                    android:background="#00FFFFFF"
                    android:gravity="top|start"
                    android:hint="@string/write_here"
                    android:inputType="textMultiLine"
                    android:maxLines="16"
                    android:minLines="8"
                    android:paddingHorizontal="4dp"
                    android:scrollbars="vertical"
                    tools:ignore="Autofill" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="?attr/colorSecondaryVariant"
            android:text="@string/post"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_add_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="Location"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/button_add"
            app:layout_constraintBottom_toBottomOf="@id/button_add"
            app:layout_constraintStart_toStartOf="@id/cardView3"/>
        <RadioButton
            android:theme="@style/Widget.Material3.CompoundButton.RadioButton"
            android:id="@+id/rb_add_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_add_location"
            app:layout_constraintBottom_toBottomOf="@id/tv_add_location"
            app:layout_constraintStart_toEndOf="@id/tv_add_location"/>

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <ProgressBar
        android:id="@+id/pb_Add_Story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:theme="@style/Widget.AppCompat.ProgressBar"/>
</androidx.constraintlayout.widget.ConstraintLayout>